after element added, bug with z-index

--- a/src/style/costomClass.css
+++ b/src/style/costomClass.css
@@ -50,6 +50,7 @@
 
 .button-class {
   align-self: flex-start;
+  position: relative;
   font-weight: 500;
   color: white;
   background-color: #4b5563;
@@ -65,9 +66,30 @@
   transition-duration: 0.5s;
 }
 
+.button-class::after {
+  content: "";
+  position: absolute;
+  width: 100%; 
+  height: 100%;
+  bottom: .7rem; 
+  left: .6rem;
+  background-color: transparent;
+  border: 2px solid #4b5563; 
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  z-index: 2;
+}
+
 .button-class:hover {
   background-color: #dc2626;
 }
+
+.button-class:hover::after {
+  bottom: 0; 
+  left: 0;
+  border-color: #dc2626;
+}
+
 
 .button-class-light {
   align-self: flex-start;
